tests/fixtures/syntax/valid/empty_case_name.repor
case "" {
  $ true
  assert { exit 0 }
}
