tests/fixtures/syntax/invalid/whitespace_only_action.repor
case "whitespace only action" {
  $   
  assert { exit 0 }
}
